@startuml

title __DATA's Class Diagram__\n

  namespace com.example.cm2305 {
    namespace data {
      class com.example.cm2305.data.LoginDataSource {
          + login()
          + logout()
      }
    }
  }
  

  namespace com.example.cm2305 {
    namespace data {
      class com.example.cm2305.data.LoginRepository {
          {static} - instance : LoginRepository
          {static} + getInstance()
          + isLoggedIn()
          + login()
          + logout()
          - LoginRepository()
          - setLoggedInUser()
      }
    }
  }
  

  namespace com.example.cm2305 {
    namespace data {
      class com.example.cm2305.data.Result {
          + toString()
          - Result()
      }
    }
  }
  

  namespace com.example.cm2305 {
    namespace data {
      class com.example.cm2305.data.Result.Error {
          - error : Exception
          + Error()
          + getError()
      }
    }
  }
  

  namespace com.example.cm2305 {
    namespace data {
      class com.example.cm2305.data.Result.Success {
          + Success()
          + getData()
      }
    }
  }
  

  com.example.cm2305.data.LoginRepository o-- com.example.cm2305.data.LoginDataSource : dataSource
  com.example.cm2305.data.LoginRepository o-- com.example.cm2305.data.model.LoggedInUser : user
  com.example.cm2305.data.Result +-down- com.example.cm2305.data.Result.Error
  com.example.cm2305.data.Result +-down- com.example.cm2305.data.Result.Success
  com.example.cm2305.data.Result.Error -up-|> com.example.cm2305.data.Result
  com.example.cm2305.data.Result.Success -up-|> com.example.cm2305.data.Result
  com.example.cm2305.data.Result.Success o-- T : data


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
